fixed the  header issue, also gave the sidebar highest z-index and reduced the width of the product desc for 540px devices

--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -69,6 +69,6 @@ color:hsl(220, 14%, 75%);
 @media (max-width:790px){
     .cart{
         right:2%;
-        z-index: 300;
+        z-index: 20;
     }
 }
