--- a/src/components/ProductPage.css
+++ b/src/components/ProductPage.css
@@ -300,7 +300,7 @@ left: 84%;
     top:45%;
     width:50px;
     height: 50px;
-    z-index: 30;
+    z-index: 5;
     border-radius: 50%;
 }
 
@@ -398,6 +398,7 @@ padding-right: 30px;
 }
 .product__cart-btn{
     width:60%;
+    height:45px
     
 }
 .product__cart-btn img{
@@ -416,6 +417,8 @@ padding-right: 30px;
 .product__quality{
     width:60%;
     margin-bottom: 20px;
+    height:45px
+
 }
 .product__price-con{
     display: flex;
@@ -435,8 +438,11 @@ padding-right: 30px;
 }
 
 @media (max-width:420px){
+    .product__name{
+    font-size:1.6rem;
+}
     .product__desc{
-width:350px;
+width:320px;
 padding-right: 30px;
 }
 .product__new-price{
@@ -447,5 +453,8 @@ padding-right: 30px;
     color:hsl(26, 100%, 55%);
     padding:0px;
     margin-left: 15px;
+}
+.product__grid-con{
+   margin-bottom: 20px;
 }
 }
