--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -8,6 +8,7 @@
     padding: 30px;
     text-align: left;
     overflow-x: hidden;
+    z-index:40;
 }
 .open-sidebar{ 
      width:60vw;
